Changed username display

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </li>
         </ul>
         <span class="navbar-text">
-           <p class="d-inline m-2">User12938</p> <i class="fas fa-2x fa-user-astronaut"></i> 
+           <p class="d-inline m-2">I &#x2764; Data</p> <i class="fas fa-2x fa-user-astronaut"></i> 
         </span>
       </div>
     </nav>
@@ -140,7 +140,7 @@
                     <input type="checkbox" class="form-check-input" id="exampleCheck2">
                     <label class="form-check-label" for="exampleCheck2">BCT Score</label>
                   </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                  <button type="button" class="btn btn-primary">Submit</button>
                 </form>
             </div>
             
@@ -189,7 +189,7 @@
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Remember me</label>
                   </div>
-                  <button id="loginbtn" type="submit" class="btn btn-primary">Start</button>
+                  <button id="loginbtn" type="button" class="btn btn-primary">Start</button>
                 </form>
               </div>
             </div>
